src/styles/global.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

/* Global variables */
:root {
    /* Colors */
    --gray-0: #090b11;
    --gray-50: #141925;
    --gray-100: #283044;
    --gray-200: #3d4663;
    --gray-300: #505d84;
    --gray-400: #6474a2;
    --gray-500: #8490b5;
    --gray-600: #a3acc8;
    --gray-700: #c3cadb;
    --gray-800: #e3e6ee;
    --gray-900: #f3f4f7;
    --gray-999-basis: 0, 0%, 100%;
    --gray-999_40: hsla(var(--gray-999-basis), 0.4);
    --gray-999: #ffffff;

    --accent-light: #c561f6;
    --accent-regular: #7611a6;
    --accent-dark: #1c0056;
    --accent-overlay: hsla(280, 89%, 67%, 0.33);
    --accent-subtle-overlay: var(--accent-overlay);
    --accent-text-over: var(--gray-999);

    --link-color: var(--accent-regular);

    /* Gradients */
    --gradient-stop-1: var(--accent-light);
    --gradient-stop-2: var(--accent-regular);
    --gradient-stop-3: var(--accent-dark);
    --gradient-subtle: linear-gradient(
        150deg,
        var(--gray-900) 19%,
        var(--gray-999) 150%
    );
    --gradient-accent: linear-gradient(
        150deg,
        var(--gradient-stop-1),
        var(--gradient-stop-2),
        var(--gradient-stop-3)
    );
    --gradient-accent-orange: linear-gradient(
        150deg,
        #ca7879,
        var(--accent-regular),
        var(--accent-dark)
    );
    --gradient-stroke: linear-gradient(
        180deg,
        var(--gray-900),
        var(--gray-700)
    );

    /* Shadows */
    --shadow-sm:
        0px 6px 3px rgba(9, 11, 17, 0.01), 0px 4px 2px rgba(9, 11, 17, 0.01),
        0px 2px 2px rgba(9, 11, 17, 0.02), 0px 0px 1px rgba(9, 11, 17, 0.03);
    --shadow-md:
        0px 28px 11px rgba(9, 11, 17, 0.01),
        0px 16px 10px rgba(9, 11, 17, 0.03), 0px 7px 7px rgba(9, 11, 17, 0.05),
        0px 2px 4px rgba(9, 11, 17, 0.06);
    --shadow-lg:
        0px 62px 25px rgba(9, 11, 17, 0.01),
        0px 35px 21px rgba(9, 11, 17, 0.05), 0px 16px 16px rgba(9, 11, 17, 0.1),
        0px 4px 9px rgba(9, 11, 17, 0.12);

    /* Text Sizes */
    --text-sm: 0.875rem;
    --text-base: 1rem;
    --text-md: 1.125rem;
    --text-lg: 1.25rem;
    --text-xl: 1.625rem;
    --text-2xl: 2.125rem;
    --text-3xl: 2.625rem;
    --text-4xl: 3.5rem;
    --text-5xl: 4.5rem;

    /* Fonts */
    --font-system:
        system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
        Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    --font-body: "Public Sans", var(--font-system);
    --font-brand: Rubik, var(--font-system);

    /* Transitions */
    --theme-transition: 0.2s ease-in-out;
    --radius: 0.625rem;
    --background: oklch(1 0 0);
    --foreground: oklch(0.145 0 0);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.145 0 0);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.145 0 0);
    --primary: oklch(0.205 0 0);
    --primary-foreground: oklch(0.985 0 0);
    --secondary: oklch(0.97 0 0);
    --secondary-foreground: oklch(0.205 0 0);
    --muted: oklch(0.97 0 0);
    --muted-foreground: oklch(0.556 0 0);
    --accent: oklch(0.97 0 0);
    --accent-foreground: oklch(0.205 0 0);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.922 0 0);
    --input: oklch(0.922 0 0);
    --ring: oklch(0.708 0 0);
    --chart-1: oklch(0.646 0.222 41.116);
    --chart-2: oklch(0.6 0.118 184.704);
    --chart-3: oklch(0.398 0.07 227.392);
    --chart-4: oklch(0.828 0.189 84.429);
    --chart-5: oklch(0.769 0.188 70.08);
    --sidebar: oklch(0.985 0 0);
    --sidebar-foreground: oklch(0.145 0 0);
    --sidebar-primary: oklch(0.205 0 0);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.97 0 0);
    --sidebar-accent-foreground: oklch(0.205 0 0);
    --sidebar-border: oklch(0.922 0 0);
    --sidebar-ring: oklch(0.708 0 0);
}

:root.theme-dark {
    --gray-0: #ffffff;
    --gray-50: #f3f4f7;
    --gray-100: #e3e6ee;
    --gray-200: #c3cadb;
    --gray-300: #a3acc8;
    --gray-400: #8490b5;
    --gray-500: #6474a2;
    --gray-600: #505d84;
    --gray-700: #3d4663;
    --gray-800: #283044;
    --gray-900: #141925;
    --gray-999-basis: 225, 31%, 5%;
    --gray-999: #090b11;

    --accent-light: #1c0056;
    --accent-regular: #7611a6;
    --accent-dark: #c561f6;
    --accent-overlay: hsla(280, 89%, 67%, 0.33);
    --accent-subtle-overlay: hsla(281, 81%, 36%, 0.33);
    --accent-text-over: var(--gray-0);

    --link-color: var(--accent-dark);

    --gradient-stop-1: #4c11c6;
    --gradient-subtle: linear-gradient(
        150deg,
        var(--gray-900) 19%,
        var(--gray-999) 81%
    );
    --gradient-accent-orange: linear-gradient(
        150deg,
        #ca7879,
        var(--accent-regular),
        var(--accent-light)
    );
    --gradient-stroke: linear-gradient(
        180deg,
        var(--gray-600),
        var(--gray-800)
    );

    --shadow-sm:
        0px 6px 3px rgba(255, 255, 255, 0.01),
        0px 4px 2px rgba(255, 255, 255, 0.01),
        0px 2px 2px rgba(255, 255, 255, 0.02),
        0px 0px 1px rgba(255, 255, 255, 0.03);
    --shadow-md:
        0px 28px 11px rgba(255, 255, 255, 0.01),
        0px 16px 10px rgba(255, 255, 255, 0.03),
        0px 7px 7px rgba(255, 255, 255, 0.05),
        0px 2px 4px rgba(255, 255, 255, 0.06);
    --shadow-lg:
        0px 62px 25px rgba(255, 255, 255, 0.01),
        0px 35px 21px rgba(255, 255, 255, 0.05),
        0px 16px 16px rgba(255, 255, 255, 0.1),
        0px 4px 9px rgba(255, 255, 255, 0.12);
}

body {
    font-family: var(--font-body);
    -webkit-font-smoothing: antialiased;
    line-height: 1.5;
}

img {
    max-width: 100%;
    height: auto;
}

a {
    color: var(--link-color);
}

h1,
h2,
h3,
h4,
h5 {
    line-height: 1.1;
    font-family: var(--font-brand);
    font-weight: 600;
}

/* Utilities */

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border-width: 0;
}

@media (min-width: 50em) {
    .lg\:gap-2 {
        gap: 0.5rem;
    }
    .lg\:gap-4 {
        gap: 1rem;
    }
    .lg\:gap-8 {
        gap: 2rem;
    }
    .lg\:gap-10 {
        gap: 2.5rem;
    }
    .lg\:gap-15 {
        gap: 3.75rem;
    }
    .lg\:gap-20 {
        gap: 5rem;
    }
    .lg\:gap-30 {
        gap: 7.5rem;
    }
    .lg\:gap-48 {
        gap: 12rem;
    }
}

@theme inline {
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);
    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);
    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);
    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);
    --color-destructive: var(--destructive);
    --color-border: var(--border);
    --color-input: var(--input);
    --color-ring: var(--ring);
    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);
    --color-sidebar: var(--sidebar);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);
}

.dark {
    --background: oklch(0.145 0 0);
    --foreground: oklch(0.985 0 0);
    --card: oklch(0.205 0 0);
    --card-foreground: oklch(0.985 0 0);
    --popover: oklch(0.205 0 0);
    --popover-foreground: oklch(0.985 0 0);
    --primary: oklch(0.922 0 0);
    --primary-foreground: oklch(0.205 0 0);
    --secondary: oklch(0.269 0 0);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.269 0 0);
    --muted-foreground: oklch(0.708 0 0);
    --accent: oklch(0.269 0 0);
    --accent-foreground: oklch(0.985 0 0);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.556 0 0);
    --chart-1: oklch(0.488 0.243 264.376);
    --chart-2: oklch(0.696 0.17 162.48);
    --chart-3: oklch(0.769 0.188 70.08);
    --chart-4: oklch(0.627 0.265 303.9);
    --chart-5: oklch(0.645 0.246 16.439);
    --sidebar: oklch(0.205 0 0);
    --sidebar-foreground: oklch(0.985 0 0);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.269 0 0);
    --sidebar-accent-foreground: oklch(0.985 0 0);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    body {
        @apply bg-background text-foreground;
    }
}

